# aispipeline

./: .gitignore  Cargo.toml  README.md
backend/: main.py  requirements.txt
script/: .env  Procfile  main.py  requirements.txt
src/: main.rs
terraform/: .terraform.lock.hcl  bigquery.tf  cloudfunction.tf  gcs.tf  iam.tf  main.tf  provider.tf  providers.tf  terraform.tfstate  terraform.tfstate.backup
