[package]
name = "aispipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = {version = "0.12"}
tokio = { version = "1.40", features = ["full"]}
arrow = { version = "53.0.0", default-features = false, features = ["csv"] }
parquet = { version = "53.0.0", features = ["arrow", "async"]}
zip = { version = "2.2.0" }
futures = { version = "0.3" }