[package]
name = "aispipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
arrow = "55.0.0"
chrono = "0.4.40"
env_logger = "0.11.8"
log = "0.4.27"
parquet = "55.0.0"
polars = { version = "0.46.0", features = [
    "parquet",
    "lazy",
    "dtype-datetime",
] }
reqwest = { version = "0.12.15", features = ["stream"] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sled = "0.34.7"
tokio = { version = "1.44.2", features = ["full"] }
tokio-cron-scheduler = "0.13.0"
zip = "2.6.1"
